--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <!-- Produtos entram aqui -->
 </main>
 
-<script src="script.js"></script>
+<script defer src="script.js"></script>
 </body>
 </html>
