Add width styling to image in index.html
Updated image tag to include styling for width.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <main class="container" id="productsContainer">
   <!-- Produtos entram aqui -->
 </main>
-<img src"imagens/ale1.png"/>
+<img style="width:100px;" src"imagens/ale1.png"/>
 <script defer src="script.js"></script>
 </body>
 </html>
